@@ -152,6 +152,9 @@ Bug Fixes
 * SOLR-4817 Solr should not fall back to the back compat built in solr.xml in SolrCloud 
   mode (Erick Erickson)
 
+* SOLR-5112: Show full message in Admin UI Logging View (Matthew Keeney via
+  steffkes)
+
 Optimizations
 ----------------------
 
